# rusty-tags

./: .travis.yml  CHANGELOG  Cargo.toml  LICENSE  README.md
src/: app_result.rs  config.rs  dependencies.rs  dirs.rs  main.rs  output.rs  path_ext.rs  rt_result.rs  tags.rs  types.rs  utils.rs  vi_tag.rs
tools/: make_rustc_tags
