[package]

name = "rusty-tags"
version = "2.8.0"
authors = ["Daniel Trstenjak <daniel.trstenjak@gmail.com>"]
license = "BSD-3-Clause"
description = "Create ctags/etags for a cargo project and all of its dependencies"
repository = "https://github.com/dan-t/rusty-tags"
readme = "README.md"

[dependencies]
toml = "0.4.5"
clap = "2.29.0"
lazy_static = "1.0.0"
tempfile = "2.2.0"
scoped_threadpool = "0.1.8"
num_cpus = "1.8.0"
scopeguard = "0.3.3"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
